infra/k8s/dev/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
spec:
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:latest
          args: [
              "-js", # Enable JetStream
              "-p",
              "4222", # Client port
              "-m",
              "8222", # Monitoring port
              "-n",
              "ticketing",
            ]
          resources:
            limits:
              memory: "400Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: montior
      protocol: TCP
      port: 8222
      targetPort: 8222
