infra/k8s/dev/payment-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-mongo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-mongo
  template:
    metadata:
      labels:
        app: payment-mongo
    spec:
      containers:
        - name: payment-mongo
          image: mongo
          resources:
            limits:
              memory: "300Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-mongo-srv
spec:
  selector:
    app: payment-mongo
  ports:
    - name: payment-db
      protocol: TCP
      port: 27017
      targetPort: 27017
