infra/k8s/dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing-test.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/users/v1/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: /api/tickets/v1/?(.*)
            backend:
              service:
                name: ticket-srv
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: /api/orders/v1/?(.*)
            backend:
              service:
                name: order-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
